--- a/.github/workflows/chatgpt-review.yaml
+++ b/.github/workflows/chatgpt-review.yaml
@@ -21,7 +21,7 @@ jobs:
           openai_model: gpt-3.5-turbo
           openai_temperature: 0.5
           openai_max_tokens: 2048
-          mode: pr-comments  # Change to 'files' if errors persist
+          mode: files  # Change to 'files' if errors persist
           language: en
           custom_prompt: "Analyze the code for best practices, security vulnerabilities, and improvements without executing it."
         continue-on-error: true  # Ensures workflow doesn't fail if the review action fails
