--- a/.github/workflows/chatgpt-review.yaml
+++ b/.github/workflows/chatgpt-review.yaml
@@ -1,27 +1,20 @@
-name: ChatGPT Code Review
-
-on:
-  pull_request:
-    types: [opened, synchronize]
+on: [pull_request]
 
 jobs:
-  code_review_job:
+  code-review:
     runs-on: ubuntu-latest
-    name: ChatGPT Code Review
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Run ChatGPT Code Review
-        uses: cirolini/genai-code-review@v2
+      # This step checks out a copy of your repository.
+      - uses: actions/checkout@v3
+      # This step references the directory that contains the action.
+      - uses: sshnaidm/gpt-code-review-action@v2.0
         with:
-          openai_api_key: ${{ secrets.OPENAI_API_KEY }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          github_pr_id: ${{ github.event.pull_request.number }}
-          openai_model: gpt-4-turbo
-          openai_temperature: 0.5
-          openai_max_tokens: 2048
-          mode: files  # Change to 'files' if errors persist
-          language: en
-          custom_prompt: "Analyze the code for best practices, security vulnerabilities, and improvements without executing it."
-        continue-on-error: true  # Ensures workflow doesn't fail if the review action fails
+          openai-key: ${{ secrets.OPENAI_API_KEY }}
+          # model: 'gpt-4'
+          # max-length: 8000
+          # prompt: 'Only suggest performance improvements for this code.'
+          # post-if-error: false
+
