--- a/.github/workflows/chatgpt-review.yaml
+++ b/.github/workflows/chatgpt-review.yaml
@@ -7,6 +7,9 @@ on:
 jobs:
   code_review_job:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     name: ChatGPT Code Review
     steps:
       - name: Checkout repository
